made form at bottom organize in one collumn on mobile, stopped form input lines from breaking the side of their container, added space between nav bar and form

--- a/src/index.css
+++ b/src/index.css
@@ -248,6 +248,15 @@ button:focus, input:focus, select:focus, textarea:focus {
   box-sizing: border-box;
 }
 
+@media (max-width: 900px) {
+  .form-horizontal .form-group {
+    width: 100%;
+  }
+  button, input, select, textarea {
+  padding: 0;
+  }
+}
+
 div.select-skin {
   height: 52px;
 }
@@ -305,4 +314,8 @@ form {
 
 .btn.btn-blue:hover {
   background:#3498B1
+}
+
+section > .container {
+  padding-top: 300px;
 }
